feat<tool-registry-service>:Execution Plan Enhancements